fix/Set max height of cropper canvas

--- a/app/assets/stylesheets/edit-avatar.scss
+++ b/app/assets/stylesheets/edit-avatar.scss
@@ -8,6 +8,10 @@
     height: 120px;
   }
 
+  &--cropper {
+    max-height: 600px;
+  }
+
   &--edit-button {
     position: absolute;
     display: block;
